--- a/css/styles.css
+++ b/css/styles.css
@@ -34,9 +34,48 @@ body {
     color: var(--accent-color);
 }
 
+h1,h2,h3,h4,h5,h6,p {
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+ul {
+    margin-bottom: 0;
+    margin-top: 0;
+    padding-left: 0;
+}
+
+img {
+    display: block;
+}
+
+.container {
+    width: 1158px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 /* header */
 .page-header {
     background-color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.page-navigation {
+    display: flex;
+    align-items: center;
+}
+
+.menu {
+    display: flex;
+}
+
+.menu-item {
+    margin-right: 40px;
 }
 
 .menu-link {
@@ -60,6 +99,7 @@ body {
     text-transform: uppercase;
     font-family: var(--secondary-font-family);
     color: var(--secondary-accent-color);
+    margin-right: 76px;
 }
 
 .logo-link-accent {
@@ -74,6 +114,12 @@ body {
 .contact { 
     font-style: normal;
 }
+
+.contact-menu {
+    display: flex;
+    align-items: center;
+}
+
 .contact-information {
     font-family: var(--main-font-family);
     color: var(--secondary-text-color);
@@ -81,6 +127,8 @@ body {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    margin-right: 40px;
+    margin-left: auto;
 }
 .contact-information:hover,
 .contact-information:focus {
