--- a/css/styles.css
+++ b/css/styles.css
@@ -51,10 +51,13 @@ img {
 
 .container {
     width: 1158px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
 
 /* header */
@@ -76,6 +79,8 @@ img {
 
 .menu-item {
     margin-right: 40px;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .menu-link {
@@ -100,6 +105,8 @@ img {
     font-family: var(--secondary-font-family);
     color: var(--secondary-accent-color);
     margin-right: 76px;
+    padding-top: 25.5px;
+    padding-bottom: 25.5px;
 }
 
 .logo-link-accent {
@@ -127,16 +134,26 @@ img {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    margin-right: 40px;
     margin-left: auto;
+    margin-right: 40px;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
+
+
 .contact-information:hover,
 .contact-information:focus {
     color: var(--accent-color);
 }
 /* hero */
 .hero { 
-    background-color: var(--primary-text-color)
+    background-color: var(--primary-text-color);
+    padding-top: 0px;
+    padding-bottom: 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  
 }
  .main-title {
     color: #FFFFFF;
@@ -145,6 +162,8 @@ img {
     line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
+    margin-top: 188px;
+    margin-bottom: 48px;
  }
 
 .button {
@@ -152,9 +171,7 @@ img {
     cursor: pointer;
 }
 .button-hero {
-    display: flex;
-        flex-direction: row;
-        align-items: flex-start;
+        align-items: center;
         padding: 16px 32px;
         gap: 10px;
 }
@@ -168,6 +185,7 @@ img {
     display: flex;
     align-items: center;
     letter-spacing: 0.04em;
+    margin: 48px 635px 188px 636px;
  }
  .modal-open-btn:hover,
  .modal-open-btn:focus {
