--- a/css/styles.css
+++ b/css/styles.css
@@ -276,7 +276,7 @@ img {
 
 .our-team-item {
     background-color: #FFFFFF;
-    flex-basis: ((100% - 72px) / 4);
+    flex-basis: calc((100% - 72px) / 4);
 }
  
  .our-team-title {
