--- a/css/styles.css
+++ b/css/styles.css
@@ -401,20 +401,18 @@ img {
     column-gap: 24px;
     padding-bottom: 120px;
     flex-wrap: wrap;
-
 }
 
 .work-examples-item {
     flex-basis: calc((100% - 144px) - 9);
 }
 
-.work-examples-img {
-    padding-top: 72px;
-    padding-right: 24px;
-    padding-bottom: 32px;
-    padding-left: 156px;
+.work-examples-border {
+    border: 1px solid #E7E9FC;
+    border-top: none;
+    margin-bottom: 48px;
 }
- 
+
 .work-examples-title {
     font-family: var(--main-font-family);
     color: var(--primary-text-color);
@@ -422,6 +420,7 @@ img {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 .work-examples-suptitle {
     font-family: var(--main-font-family);
@@ -430,4 +429,5 @@ img {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    margin-bottom: 32px;
 }
