--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,7 @@ img {
 }
 
 .container {
+    display: flex;
     width: 1158px;
     margin: 0 auto;
     padding: 0 15px;
@@ -94,8 +95,7 @@ img {
 
 .menu-item {
     margin-right: 40px;
-    padding-top: 24px;
-    padding-bottom: 24px;
+    padding: 24px 0;
 }
 
 .menu-link {
@@ -139,7 +139,6 @@ img {
 
 .contact-menu {
     display: flex;
-    align-items: center;
 }
 
 .contact-information {
@@ -167,6 +166,7 @@ img {
     padding-bottom: 0px;
     display: flex;
     justify-content: center;
+    padding: 188px 0;
   
 }
  .main-title {
@@ -176,11 +176,11 @@ img {
     line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
-    margin-top: 188px;
+    /* margin-top: 188px;
     margin-bottom: 48px;
     margin-left: auto;
-    margin-right: auto;
-    width: 496px;
+    margin-right: auto; */
+    max-width: 496px;
    
  }
 
@@ -197,7 +197,7 @@ img {
 }
 
  .modal-open-btn {
-    display: flex;
+    display: block;
     color: #FFFFFF; 
     background-color: var(--secondary-accent-color);
     font-weight: 500;
@@ -208,6 +208,9 @@ img {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 188px;
+    min-width: 169px;
+    height: 56px;
+    border: none;
  }
  .modal-open-btn:hover,
  .modal-open-btn:focus {
@@ -222,7 +225,11 @@ img {
 .feauters-list{
     display: flex;
     justify-content: center; 
-    column-gap: 24px;
+    gap: 24px;
+}
+
+.feauters-item {
+    width: calc((100% - 72px) / 4);
 }
 
  .feauters-title {
@@ -260,7 +267,7 @@ img {
 
  .activity-list {
     display: flex;
-    column-gap: 24px;
+    gap: 24px;
  }
  .activity-item {
     flex-basis: calc((100% - 48px) / 3);
