--- a/css/styles.css
+++ b/css/styles.css
@@ -78,15 +78,15 @@ img {
 /* header */
 .page-header {
     background-color: #FFFFFF;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     border-bottom: 1px solid #E7E9FC;
 }
 
 .page-navigation {
     display: flex;
     align-items: center;
+    gap: 40px;
+    justify-content: flex-end;
+    margin-right: auto;
 }
 
 .menu {
@@ -139,6 +139,10 @@ img {
 
 .contact-menu {
     display: flex;
+    gap: 40px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+
 }
 
 .contact-information {
@@ -149,9 +153,6 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     margin-left: auto;
-    margin-right: 40px;
-    padding-top: 24px;
-    padding-bottom: 24px;
 }
 
 
@@ -176,10 +177,6 @@ img {
     line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
-    /* margin-top: 188px;
-    margin-bottom: 48px;
-    margin-left: auto;
-    margin-right: auto; */
     max-width: 496px;
    
  }
