--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ img {
 }
 
 .container {
-    display: flex;
+    /* display: flex; */
     width: 1158px;
     margin: 0 auto;
     padding: 0 15px;
@@ -369,13 +369,15 @@ img {
 /* portfolio.html */
 
 /* navigation */
+.navigation {
+    padding: 96px 0 120px;
+}
 .navigation-list {
     list-style: none;
     display: flex;
     justify-content: center;
-    padding-top: 96px;
-    padding-bottom: 72px;
-    column-gap: 24px;
+    margin-bottom: 72px;
+    gap: 24px;
 }
 
 .navigation-button{
@@ -387,10 +389,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.04em;
     border: 1px solid #E7E9FC;
-   padding-top: 12px;
-   padding-right: 24px;
-   padding-bottom: 12px;
-   padding-left: 24px;
+    padding: 12px 24px;
     border-radius: 4px;
 
 }
@@ -398,6 +397,7 @@ img {
 .navigation-button:focus {
     background-color: var(--accent-color);
     color: #FFFFFF;
+    border: 1px solid transparent;
 }
 /* work examples */
 .work-examples-list{
@@ -406,16 +406,17 @@ img {
     column-gap: 24px;
     padding-bottom: 120px;
     flex-wrap: wrap;
+    row-gap: 48px;
 }
 
 .work-examples-item {
-    flex-basis: calc((100% - 144px) - 9);
+    flex-basis: calc((100% - 48px) - 3);
 }
 
 .work-examples-border {
     border: 1px solid #E7E9FC;
     border-top: none;
-    margin-bottom: 48px;
+    padding: 32px 16px;
 }
 
 .work-examples-title {
