--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,9 @@ img {
     text-align: center;
     letter-spacing: 0.02em;
     max-width: 496px;
+    margin-right: auto;
+    margin-bottom: 48px;
+    margin-left: auto;
    
  }
 
