--- a/css/styles.css
+++ b/css/styles.css
@@ -50,10 +50,13 @@ img {
 }
 
 .container {
-    /* display: flex; */
     width: 1158px;
     margin: 0 auto;
     padding: 0 15px;
+}
+
+.header-container {
+display: flex;
 }
 
 .section {
@@ -413,7 +416,7 @@ img {
 }
 
 .work-examples-item {
-    flex-basis: calc((100% - 48px) - 3);
+    width: calc((100% - 48px) - 3);
 }
 
 .work-examples-border {
