--- a/css/styles.css
+++ b/css/styles.css
@@ -416,7 +416,7 @@ display: flex;
 }
 
 .work-examples-item {
-    width: calc((100% - 48px) - 3);
+    width: calc((100% - 48px) / 3);
 }
 
 .work-examples-border {
